mdix-go/internal/include/mdix_ffi.h


enum ArrayMergeStrategy {
    ARRAY_MERGE_STRATEGY_REPLACE = 0,
    ARRAY_MERGE_STRATEGY_CONCAT = 1,
    ARRAY_MERGE_STRATEGY_CONCAT_DEDUP = 2,
};
typedef int32_t ArrayMergeStrategy;
enum MdixFormatMode {
    MDIX_FORMAT_MODE_DEFAULT = 0,
    MDIX_FORMAT_MODE_PRETTY = 1,
    MDIX_FORMAT_MODE_COMPACT = 2,
    MDIX_FORMAT_MODE_MINIFIED = 3,
};
typedef int32_t MdixFormatMode;
enum MdixMergeStrategy {
    MDIX_MERGE_STRATEGY_WEIGHTED_PRIORITY = 0,
    MDIX_MERGE_STRATEGY_PRIMARY_WINS = 1,
    MDIX_MERGE_STRATEGY_SECONDARY_WINS = 2,
    MDIX_MERGE_STRATEGY_THROW_ON_CONFLICT = 3,
};
typedef int32_t MdixMergeStrategy;
enum MdixType {
    MDIX_TYPE_UNKNOWN = -1,
    MDIX_TYPE_NULL = 0,
    MDIX_TYPE_BOOL = 1,
    MDIX_TYPE_INT = 2,
    MDIX_TYPE_LONG = 3,
    MDIX_TYPE_FLOAT = 4,
    MDIX_TYPE_DOUBLE = 5,
    MDIX_TYPE_STRING = 6,
    MDIX_TYPE_DATE = 7,
    MDIX_TYPE_TIMESTAMP = 8,
    MDIX_TYPE_HEX_COLOR = 9,
    MDIX_TYPE_BLOB = 10,
    MDIX_TYPE_REGEX = 11,
    MDIX_TYPE_ARRAY = 12,
    MDIX_TYPE_OBJECT = 13,
    MDIX_TYPE_TUPLE = 14,
    MDIX_TYPE_ENUM = 15,
};
typedef int32_t MdixType;
 const char *mdix_version(void) ;
 void *mdix_load(const char *path) ;
 void *mdix_load_str(const char *source) ;
 void mdix_free(void *handle) ;
 void *mdix_load_encrypted(const char *enc_path, const char *key_path) ;
 void *mdix_load_encrypted_password(const char *enc_path, const char *password) ;
void *mdix_load_encrypted_bytes(const uint8_t *encrypted_bytes,
                                int32_t byte_count,
                                const char *key_file_content,
                                const char *password)
;
 bool mdix_is_valid(const void *handle) ;
 int32_t mdix_entry_count(const void *handle) ;
 bool mdix_is_encrypted(const void *handle) ;
 bool mdix_is_compressed(const void *handle) ;
 char *mdix_get_loaded_version(const void *handle) ;
 char **mdix_get_all_keys(const void *handle, int32_t *out_count) ;
 char *mdix_get_config_value(const void *handle, const char *key) ;
 bool mdix_validate(const char *source) ;
 MdixType mdix_get_type(const void *handle, const char *path) ;
 int32_t mdix_get_array_length(const void *handle, const char *path) ;
 char *mdix_get_string(const void *handle, const char *path) ;
 int32_t mdix_get_int(const void *handle, const char *path) ;
 int64_t mdix_get_long(const void *handle, const char *path) ;
 float mdix_get_float(const void *handle, const char *path) ;
 double mdix_get_double(const void *handle, const char *path) ;
 bool mdix_get_bool(const void *handle, const char *path) ;
 char *mdix_get_enum_name(const void *handle, const char *path) ;
 char *mdix_get_enum_field(const void *handle, const char *path) ;
 char *mdix_get_json(const void *handle, const char *path) ;
 char *mdix_select_many_as_json(const void *handle, const char *pattern) ;
 bool mdix_exists(const void *handle, const char *path) ;
 char **mdix_get_keys(const void *handle, const char *prefix, int32_t *out_count) ;
 void mdix_free_string(char *s) ;
 void mdix_free_string_array(char **arr, int32_t count) ;
 const char *mdix_get_last_error(void) ;
 void mdix_clear_error(void) ;
 char *mdix_to_json(const void *handle, bool indented) ;
 char *mdix_to_mdix(const void *handle, MdixFormatMode mode) ;
 char *mdix_to_toml(const void *handle) ;
 char *mdix_format_source(const char *source, MdixFormatMode mode) ;
 char *mdix_minify_source(const char *source) ;
 char *mdix_compact_source(const char *source) ;
 char *mdix_strip_comments(const char *source) ;
 void mdix_builder_free(void *builder) ;
 char *mdix_builder_get_string(const void *builder, const char *path) ;
 char *mdix_builder_to_string(const void *builder) ;
 void *mdix_from_json(const char *source) ;
 void *mdix_from_toml(const char *source) ;
void *mdix_merge_sources(const char *const *sources,
                         int32_t count,
                         MdixMergeStrategy strategy,
                         ArrayMergeStrategy array_strategy,
                         char **out_conflicts_json)
;
void *mdix_merge_sources_weighted(const char *const *sources,
                                  const double *weights,
                                  int32_t count,
                                  MdixMergeStrategy strategy,
                                  ArrayMergeStrategy array_strategy,
                                  char **out_conflicts_json)
;