mdix-zig/mdix_ffi/mdix_ffi.zig

//! mdix_ffi.zig — raw Zig bindings to the DixScript C FFI layer.
//!
//! This file mirrors mdix-ffi/src/lib.rs symbol-for-symbol — every
//! `#[no_mangle] pub extern "C" fn` in that crate has a matching `extern`
//! declaration here. Hand-maintained, not generated from
//! mdix-c/include/mdix.h; re-check against mdix-ffi/src/lib.rs after any
//! FFI surface change, the same way mdix.h and
//! mdix-odin/mdix_ffi/mdix_ffi.odin are hand-maintained relative to the
//! crate. Keep all three in sync.
//!
//! Link against the platform build of mdix_ffi (same artifact the C/C++,
//! Go, and Odin wrappers use):
//!   Linux:   libmdix_ffi.so
//!   macOS:   libmdix_ffi.dylib
//!   Windows: mdix_ffi.dll (import lib mdix_ffi.lib)
//! See ../build.zig (the `-Dmdix-lib-path=` option) and ../README.md.
//!
//! Ownership rules (identical to the C API):
//!   - Every `[*:0]u8` returned by an `mdix_get_*` / `mdix_to_*` /
//!     `mdix_format_*` / `mdix_builder_get_string` / `mdix_builder_to_string`
//!     call must be freed with `mdix_free_string`.
//!   - Every opaque handle (Database, Builder, or Watcher) must be freed
//!     with `mdix_free`, `mdix_builder_free`, or `mdix_watcher_free`
//!     (matching whichever created it).
//!   - Passing `null` for a handle or path is safe — the FFI layer
//!     returns a sentinel value and records a message retrievable via
//!     `mdix_get_last_error`.
//!   - Several functions return `false`/`null` for two different reasons:
//!     a legitimate negative result ("unchanged", "invalid") AND an
//!     actual error (bad handle, I/O failure, parse failure). Where that
//!     ambiguity exists it's called out on the function; call
//!     `mdix_get_last_error` to tell them apart — it returns `null` when
//!     there was no error.

const std = @import("std");

// ── Type discriminants ───────────────────────────────────────────────────

/// Mirrors the Rust `MdixType` repr(i32) enum exactly. Numeric types are
/// contiguous: int=2, long=3, float=4, double=5. Hand-maintained — does
/// NOT auto-correct when the Rust side changes; update this alongside
/// mdix.h and mdix_ffi.odin's `Mdix_Type`.
///
/// `null` and `bool` are Zig keywords, so those two fields are written
/// with `@""` escaping (`.@"null"`, `.@"bool"`) — the values themselves
/// are unchanged from the C/Rust side.
pub const MdixType = enum(c_int) {
    unknown = -1,
    @"null" = 0,
    @"bool" = 1,
    int = 2,
    long = 3,
    float = 4,
    double = 5,
    string = 6,
    date = 7,
    timestamp = 8,
    hex_color = 9,
    blob = 10,
    regex = 11,
    array = 12,
    object = 13,
    tuple = 14,
    @"enum" = 15,
};

/// Mirrors the Rust `MdixFormatMode` repr(i32) enum exactly.
pub const MdixFormatMode = enum(c_int) {
    default = 0,
    pretty = 1,
    compact = 2,
    minified = 3,
};

/// How to resolve a key defined by more than one source in
/// `mdix_merge_sources` / `mdix_merge_sources_weighted`. Mirrors the Rust
/// `MdixMergeStrategy` repr(i32) enum exactly (hand-maintained).
pub const MdixMergeStrategy = enum(c_int) {
    /// Each source's weight decides the winner; equal weights fall back
    /// to the lower-indexed (primary) source. What `mdix_merge_sources`
    /// (no explicit weights) effectively resolves to — it auto-assigns
    /// descending weights, source 0 gets 1.0, the last source gets ~0.0.
    weighted_priority = 0,
    /// The lower-indexed source always wins, regardless of weight.
    primary_wins = 1,
    /// The higher-indexed source always wins, regardless of weight.
    secondary_wins = 2,
    /// Any key defined by more than one source is a hard error — the
    /// merge fails outright (`mdix_merge_sources*` returns `null`).
    throw_on_conflict = 3,
};

/// How to combine two array-valued entries that share a path across merge
/// sources. Mirrors the Rust `ArrayMergeStrategy` repr(i32) enum exactly
/// (hand-maintained).
pub const MdixArrayMergeStrategy = enum(c_int) {
    /// The winning source's array entirely replaces the losing one's.
    replace = 0,
    /// Both arrays are concatenated, winner's items first.
    concat = 1,
    /// Concatenated (winner first), with exact-duplicate primitive
    /// values removed. Complex values (objects, nested arrays) are never
    /// deduped.
    concat_dedup = 2,
};

// ── Metadata ────────────────────────────────────────────────────────────

/// Static pointer — do NOT free.
pub extern fn mdix_version() callconv(.c) ?[*:0]const u8;

/// Runtime version string recorded in the loaded data itself (may differ
/// from `mdix_version` if the file was produced by a different
/// mdix-cli). Caller must free with `mdix_free_string`. `null` if handle
/// is `null`.
pub extern fn mdix_get_loaded_version(handle: ?*anyopaque) callconv(.c) ?[*:0]u8;

// ── Handle lifecycle — plain .mdix ─────────────────────────────────────

pub extern fn mdix_load(path: ?[*:0]const u8) callconv(.c) ?*anyopaque;
pub extern fn mdix_load_str(source: ?[*:0]const u8) callconv(.c) ?*anyopaque;
pub extern fn mdix_free(handle: ?*anyopaque) callconv(.c) void;

// ── Handle lifecycle — encrypted .mdix.enc ─────────────────────────────

/// `key_path` may be `null` to auto-detect next to the `.enc` file.
pub extern fn mdix_load_encrypted(
    enc_path: ?[*:0]const u8,
    key_path: ?[*:0]const u8,
) callconv(.c) ?*anyopaque;

pub extern fn mdix_load_encrypted_password(
    enc_path: ?[*:0]const u8,
    password: ?[*:0]const u8,
) callconv(.c) ?*anyopaque;

/// `password` may be `null` when using key-file mode.
pub extern fn mdix_load_encrypted_bytes(
    encrypted_bytes: ?[*]const u8,
    byte_count: i32,
    key_file_content: ?[*:0]const u8,
    password: ?[*:0]const u8,
) callconv(.c) ?*anyopaque;

// ── Validity and metadata ───────────────────────────────────────────────

pub extern fn mdix_is_valid(handle: ?*anyopaque) callconv(.c) bool;
pub extern fn mdix_entry_count(handle: ?*anyopaque) callconv(.c) i32;
/// DLM compression flag recorded when the source was loaded. `false`
/// (not an error) if handle is `null`.
pub extern fn mdix_is_compressed(handle: ?*anyopaque) callconv(.c) bool;
/// DLM encryption flag recorded when the source was loaded. `false` (not
/// an error) if handle is `null`.
pub extern fn mdix_is_encrypted(handle: ?*anyopaque) callconv(.c) bool;

// ── Type inspection ─────────────────────────────────────────────────────

pub extern fn mdix_get_type(handle: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) MdixType;
pub extern fn mdix_get_array_length(handle: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) i32;

// ── Typed getters ────────────────────────────────────────────────────────

/// Returned pointer must be freed with `mdix_free_string`. `null` on
/// failure.
pub extern fn mdix_get_string(handle: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) ?[*:0]u8;
pub extern fn mdix_get_int(handle: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) i32;
/// Get a 64-bit integer at path. Also accepts int values (widened
/// without loss).
pub extern fn mdix_get_long(handle: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) i64;
pub extern fn mdix_get_float(handle: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) f32;
pub extern fn mdix_get_double(handle: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) f64;
pub extern fn mdix_get_bool(handle: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) bool;
pub extern fn mdix_get_json(handle: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) ?[*:0]u8;
pub extern fn mdix_get_enum_name(handle: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) ?[*:0]u8;
pub extern fn mdix_get_enum_field(handle: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) ?[*:0]u8;

/// Reads a key from the loaded `@CONFIG` section (e.g. "version",
/// "author", "debug_mode" — all `@CONFIG` values are strings). Caller
/// must free with `mdix_free_string`. `null` if the key isn't set or
/// handle is `null`.
pub extern fn mdix_get_config_value(handle: ?*anyopaque, key: ?[*:0]const u8) callconv(.c) ?[*:0]u8;

// ── Key existence and enumeration ──────────────────────────────────────

pub extern fn mdix_exists(handle: ?*anyopaque, path: ?[*:0]const u8) callconv(.c) bool;

/// Returns a heap-allocated array of null-terminated strings. `out_count`
/// receives the count. `prefix` may be `null` or `""` for top-level
/// keys. Free the result with `mdix_free_string_array(result, out_count.*)`.
pub extern fn mdix_get_keys(
    handle: ?*anyopaque,
    prefix: ?[*:0]const u8,
    out_count: *i32,
) callconv(.c) ?[*][*:0]u8;

/// Like `mdix_get_keys`, but every key in the entire flattened data set
/// (recursive — not just direct children of a prefix). `out_count`
/// receives the count. Free the result with
/// `mdix_free_string_array(result, out_count.*)`.
pub extern fn mdix_get_all_keys(handle: ?*anyopaque, out_count: *i32) callconv(.c) ?[*][*:0]u8;

// ── Query ────────────────────────────────────────────────────────────────

/// Sibling-path glob query (whole-segment `*` only, e.g.
/// "levels.*.enemies") — every value matching the pattern across paths
/// that share structure, gathered via
/// `dixscript::Runtime::DixData::select_many`. Returns a JSON array of
/// the matched values (caller must free with `mdix_free_string`). For a
/// single array/value at one fixed path, `mdix_get_json` already covers
/// it — this is specifically for the wildcarded, multi-path case.
pub extern fn mdix_select_many_as_json(handle: ?*anyopaque, pattern: ?[*:0]const u8) callconv(.c) ?[*:0]u8;

// ── Validation ──────────────────────────────────────────────────────────

/// Parses `source` and reports only whether it's syntactically valid
/// DixScript — this is NOT schema validation against expected
/// fields/types, just "does it parse". `false` on either a real parse
/// failure or a `null`/empty source — check `mdix_get_last_error` to
/// tell them apart.
pub extern fn mdix_validate(source: ?[*:0]const u8) callconv(.c) bool;

// ── Memory management ──────────────────────────────────────────────────

pub extern fn mdix_free_string(s: ?[*:0]u8) callconv(.c) void;
pub extern fn mdix_free_string_array(arr: ?[*][*:0]u8, count: i32) callconv(.c) void;

// ── Error reporting ─────────────────────────────────────────────────────

/// Valid until the next FFI call. Do NOT free. Returns `null` when there
/// was no error.
pub extern fn mdix_get_last_error() callconv(.c) ?[*:0]const u8;
pub extern fn mdix_clear_error() callconv(.c) void;

// ── Conversion — export ────────────────────────────────────────────────

pub extern fn mdix_to_json(handle: ?*anyopaque, indented: bool) callconv(.c) ?[*:0]u8;
pub extern fn mdix_to_toml(handle: ?*anyopaque) callconv(.c) ?[*:0]u8;
/// Returns a `char*` cast as `void*` on the C side — the pointee is a
/// null-terminated string; treat it as `[*:0]u8` and free with
/// `mdix_free_string` (cast through `@ptrCast`), same as every other
/// owned-string return in this file.
pub extern fn mdix_to_mdix(handle: ?*anyopaque, mode: MdixFormatMode) callconv(.c) ?*anyopaque;

// ── Conversion — source text formatting ────────────────────────────────

pub extern fn mdix_format_source(source: ?[*:0]const u8, mode: MdixFormatMode) callconv(.c) ?[*:0]u8;
pub extern fn mdix_minify_source(source: ?[*:0]const u8) callconv(.c) ?[*:0]u8;
/// Removes blank/redundant whitespace without touching comments or
/// overall structure — see `mdix_minify_source` for the more aggressive
/// pass.
pub extern fn mdix_compact_source(source: ?[*:0]const u8) callconv(.c) ?[*:0]u8;
/// Strips line and block comments, leaving formatting otherwise
/// untouched.
pub extern fn mdix_strip_comments(source: ?[*:0]const u8) callconv(.c) ?[*:0]u8;

// ── Conversion — foreign format import ─────────────────────────────────

/// Returned handle must be freed with `mdix_free`.
pub extern fn mdix_from_json(source: ?[*:0]const u8) callconv(.c) ?*anyopaque;
pub extern fn mdix_from_toml(source: ?[*:0]const u8) callconv(.c) ?*anyopaque;
